--- a/src/components/sections/FAQSection.css
+++ b/src/components/sections/FAQSection.css
@@ -29,7 +29,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
+  /* background: rgba(0, 0, 0, 0.6); */
   z-index: 2;
 }
 
@@ -65,7 +65,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  min-height: 590px;
+  min-height: 550px;
 }
 
 .faq-title {
